<resources>
    <string name="app_name">WeddingFlow</string>

    <!-- Toolbar Menu options -->
    <string name="settings">Settings</string>
    <string name="edit_wedding">Edit Wedding Details</string>
    <string name="log_out">Logout</string>
    <string name="help">Help</string>

    <!-- Main Menu Bottom Titles -->
    <string name="home_menu">Home</string>
    <string name="organize_menu">Organize</string>
    <string name="budget_menu">Budget</string>
    <string name="guest_list_menu">Guests</string>
    <string name="share_menu">Share</string>

    <!--Home Fragment-->
    <string name="home_countdown_default">0</string>
    <string name="home_days">days</string>
    <string name="home_first_line">until the wedding of</string>
    <string name="home_participants">[PARTICIPANTS]</string>
    <string name="home_second_line">at</string>
    <string name="home_location">[LOCATION]</string>

    <!-- Hints -->
    <string name="first_name_hint">First name</string>
    <string name="surname_hint">Surname</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="dob_hint">Date of Birth</string>
    <string name="wedding_participants_hint">Wedding Participants</string>
    <string name="wedding_location_hint">Location</string>
    <string name="wedding_date_hint">Date</string>
    <string name="wedding_picture_hint">Picture</string>
    <string name="initial_savings_hint">Initial Savings</string>
    <string name="periodic_savings_hint">Periodic Savings</string>
    <string name="periodicity_hint">Periodicity</string>

    <!-- Overview Labels -->
    <string name="current_estimated_funds_label">Current Estimated Funds:</string>
    <string name="monthly_savings_label">Monthly Savings:</string>
    <string name="upcoming_bill_label">Next Bill:</string>
    <string name="upcoming_increase_label">Next Fund Increase:</string>
    <string name="next_negative_label">Next Negative Balance:</string>
    <string name="surplus_funds_label">Predicted Surplus:</string>

    <!-- Overview Placeholders -->
    <string name="current_estimated_funds_placeholder">[---]</string>
    <string name="monthly_savings_placeholder">[---]</string>
    <string name="upcoming_bill_placeholder">[---]</string>
    <string name="upcoming_increase_placeholder">[---]</string>
    <string name="next_negative_placeholder">Never</string>
    <string name="surplus_funds_placeholder">[---]</string>

    <!-- Periodicity Spinner -->
    <string-array name="periodicity_array">
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Quarterly</item>
    </string-array>


    <!-- Direction Spinner -->
    <string-array name="direction_array">
        <item>Out</item>
        <item>In</item>
    </string-array>

    <string name="weekly_periodicity">Weekly</string>
    <string name="monthly_periodicity">Monthly</string>
    <string name="quarterly_periodicity">Quarterly</string>

    <!-- checkbox -->
    <string name="login_checkbox">Stay signed in</string>

    <!-- content decriptions -->
    <string name="logo_content_description">Logo for WeddingFlow application.</string>
    <string name="home_image_content_description">Wedding Image</string>

    <!-- Button Text -->
    <string name="forgot_password_button">Forgotten Password?</string>
    <string name="login_button">Login</string>
    <string name="sign_up_button">Sign up</string>
    <string name="complete_setup_button">Complete Setup</string>
    <string name="edit_wedding_button">Finish Editing</string>
    <string name="edit_budget_button">Finish Editing</string>
    <string name="change_password_button">Change Password</string>
    <string name="add_payment_button">Add Payment</string>
    <string name="edit_payment_button">Edit Payment</string>

    <!-- Payment Card -->
    <string name="payment_name_placeholder">Name</string>
    <string name="payment_memo_placeholder">An example memo</string>
    <string name="payment_amount_placeholder">£250.00</string>
    <string name="payment_date_placeholder">01-01-2019</string>

    <!-- Eror messages -->
    <string name="login_error">ERROR: Invalid Credentials</string>

    <!-- Shared Preferences -->
    <string name="SP_UserId">com.shumadlads.hallamhelper.hallamhelper.UserId</string>
    <string name="SP_StayLoggedIn">com.shumadlads.hallamhelper.hallamhelper.StayLoggedIn</string>
    <string name="SP_EventId">com.shumadlads.hallamhelper.hallamhelper.EventId</string>
    <string name="SP_BudgetId">com.shumadlads.hallamhelper.hallamhelper.BudgetId</string>

    <!-- Settings -->

    <!-- Account Settings -->
    <string name="account_label">Account</string>

    <string name="current_password">Enter Current Password</string>
    <string name="new_password">Enter New Password</string>
    <string name="confirm_password">Confirm Password</string>


    <string name="bottomsheet_add_payment">Add Payment</string>
    <string name="bottomsheet_edit_savings">Edit Savings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Add Payment -->
    <string name="payment_name_hint">Name</string>
    <string name="payment_date_hint">Scheduled for</string>
    <string name="payment_memo_hint">Memo</string>
    <string name="payment_amount_hint">Amount</string>
    <string name="payment_direction_hint">Direction</string>
</resources>
